# temporal-field-kernel

./: .gitignore  Brainstorming.md  Cargo.toml  README.md  Temporal_Field_Kernel_Brainstorming.md
config/: tfk.toml.example
crates/tfk-api/: Cargo.toml
crates/tfk-api/src/: lib.rs
crates/tfk-api/tests/: endpoints.rs  health.rs
crates/tfk-cli/: Cargo.toml
crates/tfk-cli/src/: lib.rs  main.rs
crates/tfk-cli/tests/: http_client.rs
crates/tfk-core/: Cargo.toml
crates/tfk-core/src/: lib.rs
crates/tfk-core/tests/: forecast_scoring.rs  preflight_scoring.rs  time_field_lens.rs
crates/tfk-daemon/: Cargo.toml
crates/tfk-daemon/src/: main.rs
crates/tfk-daemon/tests/: uds_smoke.rs
crates/tfk-eval/: Cargo.toml
crates/tfk-eval/src/: lib.rs  main.rs
crates/tfk-eval/tests/: replay.rs
crates/tfk-mcp/: Cargo.toml
crates/tfk-mcp/src/: lib.rs  main.rs
crates/tfk-mcp/tests/: stdio_scaffold.rs
crates/tfk-model-client/: Cargo.toml
crates/tfk-model-client/src/: lib.rs
crates/tfk-model-client/tests/: forecast.rs
crates/tfk-protocol/: Cargo.toml
crates/tfk-protocol/src/: lib.rs
crates/tfk-protocol/tests/: protocol_roundtrip.rs
crates/tfk-rules/: Cargo.toml
crates/tfk-rules/src/: lib.rs
crates/tfk-rules/tests/: fixed_point.rs
crates/tfk-store/: Cargo.toml
crates/tfk-store/src/: lib.rs
crates/tfk-store/tests/: archive_store.rs
crates/tfk-vector/: Cargo.toml
crates/tfk-vector/src/: lib.rs
docs/: api.md  architecture.md  mvp-slices.md  time-field.md
fixtures/temporalbench/action_loop/: commit_forecast_assimilate.json  commitment_consequence_choice.json  commitment_defer_boundary.json  commitment_lifecycle_retire.json  commitment_stabilize_boundary.json
fixtures/temporalbench/correction_persistence/: events.jsonl
fixtures/temporalbench/forecast_advisory/: basic_forecast.json
fixtures/temporalbench/forecast_commitment/: basic.json
fixtures/temporalbench/lens_advisory_signal/: basic.json
fixtures/temporalbench/lens_linked_raw_event/: basic.json
fixtures/temporalbench/relation_boundary/: basic.json
fixtures/temporalbench/relation_ranking/: basic.json
fixtures/temporalbench/rules_lens_influence/: review_now.json
fixtures/temporalbench/semantic_lens_influence/: backslash_literal.json  basic.json  wildcard_literal.json
fixtures/temporalbench/vector_lens_influence/: basic.json  dedupe_and_distance_order.json  stale_hits_ignored.json
migrations/: 0001_init.sql  0002_fts.sql  0003_vector.sql
python/tfk_predictor/: pyproject.toml
python/tfk_predictor/tests/: test_server.py
python/tfk_predictor/tfk_predictor/: __init__.py  server.py
rules/: core.dl
