[package]
name = "tfk-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "tfk"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
tfk-protocol = { path = "../tfk-protocol" }
tokio.workspace = true
