[package]
name = "tfk-daemon"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "tfkd"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
clap.workspace = true
hyper.workspace = true
hyper-util.workspace = true
tfk-api = { path = "../tfk-api" }
tfk-store = { path = "../tfk-store" }
tokio.workspace = true
tower.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile.workspace = true
