[package]
name = "tfk-eval"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "tfk-eval"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tfk-core = { path = "../tfk-core" }
tfk-model-client = { path = "../tfk-model-client" }
tfk-protocol = { path = "../tfk-protocol" }
tfk-store = { path = "../tfk-store" }
tfk-vector = { path = "../tfk-vector" }
